修正了一个关于计时器的致命性bug

--- a/mobile/src/main/res/layout/content_l_obd.xml
+++ b/mobile/src/main/res/layout/content_l_obd.xml
@@ -30,7 +30,6 @@
         android:id="@+id/ll_msg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
         app:layout_marginLeftPercent="2%h"
         app:layout_marginRightPercent="2%h">
 
@@ -48,8 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_alignParentBottom="true"
-            app:layout_marginBottomPercent="5%h"
-            app:layout_heightPercent="12%h">
+            app:layout_heightPercent="12%h"
+            app:layout_marginBottomPercent="5%h">
 
             <TextView
                 android:id="@+id/tv_msg"
