--- a/mobile/src/main/res/layout/content_set_system.xml
+++ b/mobile/src/main/res/layout/content_set_system.xml
@@ -11,6 +11,54 @@
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
+        android:text="APP设置"
+        android:textColor="@color/colorPrimary"
+        android:textSize="14sp" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_apps_hides"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:summary="全部应用将隐藏选中的项目"
+        st:titleEx="桌面隐藏项目"
+        st:type="buttonB" />
+
+    <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_launcher_show_dock_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:summary="@string/set_show"
+        st:summary2="@string/set_hide"
+        st:titleEx="展示dock标签"
+        st:type="switchB" />
+
+    <View style="@style/Interval" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
+        android:text="开发"
+        android:textColor="@color/colorPrimary"
+        android:textSize="14sp" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_key_listener"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:titleEx="按键测试,可测试方控的按键信息,看看能不能匹配上"
+        st:type="buttonB" />
+
+    <View style="@style/Interval" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
         android:text="高大上的系统设置（通常被车机厂商隐藏的功能）"
         android:textColor="@color/colorPrimary"
         android:textSize="14sp" />
