--- a/mobile/src/main/res/layout/popup_navi.xml
+++ b/mobile/src/main/res/layout/popup_navi.xml
@@ -14,8 +14,8 @@
         android:background="@drawable/n_l_item1_bg_cb"
         android:padding="5dp"
         android:visibility="gone"
-        app:layout_heightPercent="45%w"
-        app:layout_widthPercent="45%w">
+        app:layout_heightPercent="60%h"
+        app:layout_widthPercent="60%h">
 
         <ImageView
             android:id="@+id/iv_info"
@@ -30,6 +30,6 @@
         android:id="@+id/fl_plugin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_heightPercent="45%w"
-        app:layout_widthPercent="45%w" />
+        app:layout_heightPercent="60%w"
+        app:layout_widthPercent="60%w" />
 </com.zhy.android.percent.support.PercentLinearLayout>
