--- a/mobile/src/main/res/layout/popup_voice.xml
+++ b/mobile/src/main/res/layout/popup_voice.xml
@@ -9,6 +9,7 @@
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,NestedWeights">
 
     <com.zhy.android.percent.support.PercentLinearLayout
+        android:id="@+id/ll_win"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@drawable/n_l_item1_bg"
@@ -28,13 +29,18 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:layout_marginPercent="10%h" />
+            android:gravity="center_vertical|left"
+            android:text="你好!"
+            android:textColor="@color/l_text1"
+            app:layout_marginPercent="10%h"
+            app:layout_textSizePercent="30%h" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="确认"
+            android:visibility="gone"
             app:layout_marginPercent="10%h" />
 
         <TextView
@@ -42,6 +48,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="取消"
+            android:visibility="gone"
             app:layout_marginPercent="10%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
 </com.zhy.android.percent.support.PercentLinearLayout>
