语音助手开关

--- a/mobile/src/main/res/layout/content_set_home.xml
+++ b/mobile/src/main/res/layout/content_set_home.xml
@@ -64,4 +64,15 @@
         st:type="switchB" />
 
     <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_use_va"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:summary="@string/set_yes"
+        st:summary2="@string/set_no"
+        st:titleEx="开启语音助手"
+        st:type="switchB" />
+
+    <View style="@style/Interval" />
 </LinearLayout>
