--- a/mobile/src/main/res/layout/item_list_all_app.xml
+++ b/mobile/src/main/res/layout/item_list_all_app.xml
@@ -16,7 +16,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:ellipsize="end"
         android:gravity="center_vertical|left"
-        android:paddingLeft="10dp"
-        android:textColor="@android:color/white" />
+        android:paddingLeft="10dp" />
 </LinearLayout>
