--- a/mobile/src/main/res/layout/content_driving_cool_black_tp.xml
+++ b/mobile/src/main/res/layout/content_driving_cool_black_tp.xml
@@ -1,87 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:ignore="HardcodedText">
+    android:layout_height="match_parent">
 
-    <TextView
+    <com.zhy.android.percent.support.PercentLinearLayout
+        android:id="@+id/ll_cover"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="胎压"
-        android:textColor="#ccc"
-        app:layout_textSizePercent="18%h" />
+        android:layout_height="match_parent"
+        android:gravity="center">
 
-    <com.zhy.android.percent.support.PercentRelativeLayout
+        <com.wow.carlauncher.common.view.CustomRoundAngleImageView
+            android:id="@+id/music_iv_cover"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:contentDescription="@string/app_name"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/music_dlogo"
+            app:layout_heightPercent="85%h"
+            app:layout_widthPercent="85%h"
+            app:radius="6dp" />
+    </com.zhy.android.percent.support.PercentLinearLayout>
+
+    <com.zhy.android.percent.support.PercentLinearLayout
+        android:id="@+id/ll_tp"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"
+        tools:ignore="HardcodedText">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="胎压"
+            android:textColor="#ccc"
+            app:layout_textSizePercent="18%h" />
+
+        <com.zhy.android.percent.support.PercentRelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2">
 
 
-        <com.zhy.android.percent.support.PercentLinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:orientation="vertical"
-            app:layout_widthPercent="45%w"
-            tools:ignore="RtlHardcoded">
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:orientation="vertical"
+                app:layout_widthPercent="45%w"
+                tools:ignore="RtlHardcoded">
 
-            <TextView
-                android:id="@+id/tv_lf"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center_vertical|right"
-                android:lineSpacingExtra="2dp"
-                android:text="2.1/16°"
-                android:textColor="#fff"
-                app:layout_textSizePercent="25%h" />
+                <TextView
+                    android:id="@+id/tv_lf"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|right"
+                    android:lineSpacingExtra="2dp"
+                    android:text="2.1/16°"
+                    android:textColor="#fff"
+                    app:layout_textSizePercent="25%h" />
 
-            <TextView
-                android:id="@+id/tv_lb"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center_vertical|right"
-                android:lineSpacingExtra="2dp"
-                android:text="2.1/16°"
-                android:textColor="#fff"
-                app:layout_textSizePercent="25%h" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
+                <TextView
+                    android:id="@+id/tv_lb"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|right"
+                    android:lineSpacingExtra="2dp"
+                    android:text="2.1/16°"
+                    android:textColor="#fff"
+                    app:layout_textSizePercent="25%h" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
 
-        <com.zhy.android.percent.support.PercentLinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:orientation="vertical"
-            app:layout_widthPercent="45%w"
-            tools:ignore="RtlHardcoded">
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:orientation="vertical"
+                app:layout_widthPercent="45%w"
+                tools:ignore="RtlHardcoded">
 
-            <TextView
-                android:id="@+id/tv_rf"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center_vertical|left"
-                android:lineSpacingExtra="2dp"
-                android:text="2.1/16°"
-                android:textColor="#fff"
-                app:layout_textSizePercent="25%h" />
+                <TextView
+                    android:id="@+id/tv_rf"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:lineSpacingExtra="2dp"
+                    android:text="2.1/16°"
+                    android:textColor="#fff"
+                    app:layout_textSizePercent="25%h" />
 
-            <TextView
-                android:id="@+id/tv_rb"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center_vertical|left"
-                android:lineSpacingExtra="2dp"
-                android:text="2.1/16°"
-                android:textColor="#fff"
-                app:layout_textSizePercent="25%h" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
-    </com.zhy.android.percent.support.PercentRelativeLayout>
-</com.zhy.android.percent.support.PercentLinearLayout>
+                <TextView
+                    android:id="@+id/tv_rb"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:lineSpacingExtra="2dp"
+                    android:text="2.1/16°"
+                    android:textColor="#fff"
+                    app:layout_textSizePercent="25%h" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
+        </com.zhy.android.percent.support.PercentRelativeLayout>
+    </com.zhy.android.percent.support.PercentLinearLayout>
+</FrameLayout>
