--- a/mobile/src/main/res/layout/content_l_music.xml
+++ b/mobile/src/main/res/layout/content_l_music.xml
@@ -52,26 +52,28 @@
                 app:radius="6dp" />
         </com.zhy.android.percent.support.PercentRelativeLayout>
 
-        <TextView
+        <com.wow.carlauncher.common.view.AutoMarqueeTextView
             android:id="@+id/tv_music_title"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:ellipsize="marquee"
             android:gravity="center"
             android:includeFontPadding="false"
-            android:lines="1"
+            android:singleLine="true"
             android:text="音乐名称"
             android:textColor="#697380"
             app:layout_heightPercent="15%h"
             app:layout_marginTopPercent="5%h"
             app:layout_textSizePercent="7%h" />
 
-        <TextView
+        <com.wow.carlauncher.common.view.AutoMarqueeTextView
             android:id="@+id/tv_zuozhe"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:ellipsize="marquee"
             android:gravity="center"
             android:includeFontPadding="false"
-            android:lines="1"
+            android:singleLine="true"
             android:text="作者"
             android:textColor="#7b8391"
             app:layout_heightPercent="10%h"
