--- a/mobile/src/main/res/layout/popup_console.xml
+++ b/mobile/src/main/res/layout/popup_console.xml
@@ -41,7 +41,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:paddingRight="10dp"
-                android:text="车机助手"
+                android:text="嘟嘟桌面"
                 android:textColor="@android:color/white"
                 app:layout_textSizePercent="70%h" />
         </com.zhy.android.percent.support.PercentLinearLayout>
