高德增加巡航速度显示

--- a/mobile/src/main/res/layout/content_driving_cool_black_music.xml
+++ b/mobile/src/main/res/layout/content_driving_cool_black_music.xml
@@ -12,6 +12,7 @@
         android:layout_weight="1"
         android:ellipsize="marquee"
         android:gravity="center"
+        android:marqueeRepeatLimit="marquee_forever"
         android:singleLine="true"
         android:text="@string/music_name"
         android:textColor="#ccc"
@@ -24,6 +25,7 @@
         android:layout_weight="1"
         android:ellipsize="marquee"
         android:gravity="center"
+        android:marqueeRepeatLimit="marquee_forever"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:singleLine="true"
