--- a/mobile/src/main/res/layout/content_l_music.xml
+++ b/mobile/src/main/res/layout/content_l_music.xml
@@ -59,6 +59,7 @@
             android:ellipsize="marquee"
             android:gravity="center"
             android:includeFontPadding="false"
+            android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
             android:text="音乐名称"
             android:textColor="#697380"
@@ -73,6 +74,7 @@
             android:ellipsize="marquee"
             android:gravity="center"
             android:includeFontPadding="false"
+            android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
             android:text="作者"
             android:textColor="#7b8391"
