--- a/mobile/src/main/res/layout/content_l_fm.xml
+++ b/mobile/src/main/res/layout/content_l_fm.xml
@@ -117,5 +117,11 @@
                     android:scaleType="fitCenter" />
             </LinearLayout>
         </com.zhy.android.percent.support.PercentLinearLayout>
+
+        <FrameLayout
+            android:id="@+id/fl_www"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_heightPercent="40%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
 </com.zhy.android.percent.support.PercentRelativeLayout>
